--- a/projeto/index.html
+++ b/projeto/index.html
@@ -628,7 +628,7 @@
                 </div>
 
                 <div>
-                    <form class="container">
+                    <form action="http://142.93.193.126/api/senai" method="get" class="container">
                         <label for="email"></label>
                         <input type="email" id="email" name="email" placeholder="Your Email">
                         <input type="submit" value="Subscribe">
